@@ -1,3 +1,8 @@
+2018-12-21  Andreas Krebbel  <krebbel@linux.ibm.com>
+
+	* gcc.target/s390/vector/fp-signedint-convert-1.c: New test.
+	* gcc.target/s390/vector/fp-unsignedint-convert-1.c: New test.
+
 2018-12-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/88563
